# Moogla

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  README.md  config.example.toml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
deploy/kubernetes/: deployment.yaml  service.yaml
docs/: authentication.md  deployment.md  index.md  local_models.md  metrics.md  plugins.md  setup.md  web_ui.md
scripts/: build_package.sh  setup.sh
src/moogla/: __init__.py  auth.py  cli.py  config.py  executor.py  logging_config.py  metrics.py  plugins.py  plugins_config.py  server.py
src/moogla/web/: README.md  app.js  index.html
tests/: async_plugin.py  async_setup_plugin.py  dummy_plugin.py  order_plugin_a.py  order_plugin_b.py  settings_plugin.py  setup_plugin.py  teardown_plugin.py  test_async_llama.py  test_async_plugin.py  test_async_setup_plugin.py  test_auth.py  test_basic.py  test_cli.py  test_config.py  test_cors.py  test_endpoints.py  test_engine_disposal.py  test_error_cases.py  test_executor.py  test_executor_close.py  test_jwt_secret.py  test_main_module.py  test_metrics.py  test_plugin_config.py  test_plugin_endpoints_runtime.py  test_plugin_entrypoints.py  test_plugin_errors.py  test_rate_limit.py  test_teardown_plugin.py  test_version.py  test_web.py
