[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moogla"
version = "0.0.1"
description = "Local-first LLM runtime and orchestration framework"
authors = [{name="Rehkad"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.28",
    "openai>=1.30",
]

[project.scripts]
moogla = "moogla.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

